<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekLength"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/length" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/text_char_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekLength" />

    <CheckBox
        android:id="@+id/upper_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_upper_letter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/lower_letter"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <CheckBox
        android:id="@+id/lower_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_lower_letter"
        app:layout_constraintLeft_toRightOf="@id/upper_letter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <CheckBox
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_number"
        app:layout_constraintLeft_toLeftOf="@id/upper_letter"
        app:layout_constraintTop_toBottomOf="@+id/upper_letter" />

    <CheckBox
        android:id="@+id/symbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_symbols"
        app:layout_constraintLeft_toLeftOf="@id/lower_letter"
        app:layout_constraintTop_toBottomOf="@+id/lower_letter" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/number" />

    <Button
        android:id="@+id/generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_generate_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/save"
        app:layout_constraintEnd_toStartOf="@id/copy"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_password"
        app:layout_constraintBottom_toBottomOf="@id/generate"
        app:layout_constraintEnd_toStartOf="@id/generate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/generate" />

    <Button
        android:id="@+id/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_copy_password"
        app:layout_constraintBottom_toBottomOf="@id/generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/generate"
        app:layout_constraintTop_toTopOf="@id/generate" />
</androidx.constraintlayout.widget.ConstraintLayout>