<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.RecordDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_title"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_title"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_account"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_account"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_password"
                android:paddingRight="60dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/eye"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="6dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_outline_eye_24"
            android:tint="#888888"
            app:layout_constraintBottom_toBottomOf="@id/layout_password"
            app:layout_constraintRight_toRightOf="@id/layout_password"
            app:layout_constraintTop_toTopOf="@id/layout_password" />

        <ImageView
            android:id="@+id/clear"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="6dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_close_24"
            android:tint="#888888"
            app:layout_constraintBottom_toBottomOf="@id/layout_password"
            app:layout_constraintRight_toLeftOf="@id/eye"
            app:layout_constraintTop_toTopOf="@id/layout_password" />

        <Button
            android:id="@+id/btn_copy_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_copy_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_detail"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_copy_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:hint="@string/text_detail"
                android:inputType="textMultiLine"
                android:minLines="10" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>